# pulumi-synced-folder

./: Makefile  README.md  package.json  schema.json
.github/workflows/: add-to-project.yml  release.yaml
examples/synced-folder-aws-csharp/: Program.cs  Pulumi.yaml  synced-folder-aws-csharp.csproj
examples/synced-folder-aws-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/synced-folder-aws-multiple-buckets/: Pulumi.yaml
examples/synced-folder-aws-python/: Pulumi.yaml  __main__.py
examples/synced-folder-aws-typescript/: Pulumi.yaml  index.ts  package.json
examples/synced-folder-aws-yaml/: Pulumi.yaml
examples/synced-folder-azure-csharp/: Program.cs  Pulumi.yaml  synced-folder-azure-csharp.csproj
examples/synced-folder-azure-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/synced-folder-azure-python/: Pulumi.yaml  __main__.py
examples/synced-folder-azure-typescript/: Pulumi.yaml  index.ts  package.json
examples/synced-folder-azure-yaml/: Pulumi.yaml
examples/synced-folder-gcp-csharp/: Program.cs  Pulumi.yaml  synced-folder-gcp-csharp.csproj
examples/synced-folder-gcp-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/synced-folder-gcp-python/: Pulumi.yaml  __main__.py
examples/synced-folder-gcp-typescript/: Pulumi.yaml  index.ts  package.json
provider/: go.mod  go.sum
scripts/: test-plugin.sh
sdk/: go.mod  go.sum
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_synced_folder/: __init__.py  _utilities.py  azure_blob_folder.py  google_cloud_folder.py  provider.py  pulumi-plugin.json  s3_bucket_folder.py
(+56 files in other folders)
